k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ep-service
  labels:
    app: ep
spec:
  type: NodePort
  selector:
    app: ep
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      # NodePort will be automatically assigned between 30000-32767
      # Or you can specify: nodePort: 30080
